# ironclaw

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.worker  FEATURE_PARITY.md  README.md
.github/workflows/: build-push.yaml
deploy/: com.ironclaw.frack.plist  setup-frack.sh  setup-frick.sh
docs/: INTEGRATION_PLAN.md  MEMORY_TRANSFER_PLAN.md  OPERATIONS.md  REMAINING_INTEGRATION_WORK.md
docs/reference/: AGENTS.recommended.md
k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml
migrations/: V10__learnings.sql  V9__agent_tasks.sql
skills/: mcp-devops-tools
skills/adr-generator/: SKILL.md
skills/arscontexta-architect/: SKILL.md
skills/arscontexta-ask/: SKILL.md
skills/arscontexta-health/: SKILL.md
skills/arscontexta-recommend/: SKILL.md
skills/arscontexta-reseed/: SKILL.md
skills/arscontexta-setup/: SKILL.md
skills/brave-search/: SKILL.md
skills/commit-helper/: SKILL.md
skills/gccli/: SKILL.md
skills/gdcli/: SKILL.md
skills/infrastructure-deployer/: SKILL.md
skills/mcp-devops-tools/: Cargo.toml  SKILL.md
skills/mcp-devops-tools/src/: config.rs  error.rs  finance.rs  homelab.rs  infrastructure.rs  lib.rs  main.rs  memory.rs  office.rs  research.rs  smart_home.rs  think.rs  tools.rs  transport.rs
skills/prd-generator/: SKILL.md
skills/repo-creator/: SKILL.md
src/: bootstrap.rs  config.rs  error.rs  lib.rs  main.rs  settings.rs
tests/: openai_compat_integration.rs  workspace_integration.rs  ws_gateway_integration.rs
(+97 files in other folders)
