[package]
name = "mcp-devops-tools"
version = "1.0.0"
edition = "2021"
description = "Claude Skills - MCP DevOps Tools for infrastructure management, database operations, homelab services, smart home control, and office automation"
license = "MIT"
authors = ["Leo"]
repository = "https://github.com/l3ocifer/skills"
keywords = ["mcp", "devops", "claude", "ai", "skills"]
categories = ["development-tools", "api-bindings"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Schema validation
jsonschema = "0.17"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "mcp-devops-tools"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
